# call-dispatch-macro

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs
tests/: 01-test.rs  02-async.rs  progress.rs
